Fix resume icon spacing

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -116,7 +116,7 @@ div#links ul li#facebook {
 }
 
 div#links ul li#resume {
-    margin-left:  0.2rem;
+    margin-left:  0.3rem;
 }
 
 div#links ul li a {
